# ChangeLog for dev-java/antlr
# Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

  14 Aug 2008; Jesse Farinacci <jieryn@gmail.com> +metadata.xml:
  creating metadata.xml to shut up repoman

  25 May 2007; Vlastimil Babka <caster@gentoo.org> -antlr-3.0_beta7.ebuild,
  antlr-3.0.ebuild:
  Big cleanup and restrict test.

  21 May 2007; Petteri Räty <betelgeuse@gentoo.org> ChangeLog:
  Removing KEYWORDS because the ebuild fails when unit is not installed and
  does not always depend on it.

  20 May 2007; Miroslav Šulc <fordfrog@gentoo.org> antlr-3.0.ebuild:
  Added missing ant-trax to tests and minor cleanups

  18 May 2007; <serkan_kaba@yahoo.com> +antlr-3.0.ebuild:
  Added antlr-3.0

  03 May 2007; Alistair John Bush <ali_bush@gentoo.org> ChangeLog:
  Drop all keywords from antlr until all dependencies build

  24 Apr 2007; Miroslav Šulc <fordfrog@gentoo.org> antlr-3.0_beta7.ebuild:
  Corrected so it compiles in my case
