@@ -1,8 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <!DOCTYPE pkgmetadata SYSTEM "http://www.gentoo.org/dtd/metadata.dtd">
 <pkgmetadata>
-  <herd>java</herd>
-  <use>
-    <flag name="script">Install a script to run antlr</flag>
-  </use>
+	<herd>java</herd>
 </pkgmetadata>
